# StoSpa2

./: .gitignore  .readthedocs.yml  .travis.yml  CMakeLists.txt  MANIFEST  README.md  build-wheels-dockcross.sh  build-wheels.sh  dev-requirements.txt  setup.py  setup_pystospa.sh  setup_stospa.sh
benchmarks/: CMakeLists.txt  benchmark_cme.cpp  benchmark_diffusion.cpp  benchmark_schnakenberg.cpp
cmake/: FindSphinx.cmake
docs/: .gitignore  CMakeLists.txt  Doxyfile.in  animation.py  conf.py.in  main_page.txt  requirements.txt
docs/joss_paper/: .gitignore  paper.bib  paper.md
docs/joss_paper/figs/: figs.py  structured.msh  unstructured.msh
docs/src/: api.rst  feedback.rst  index.rst  install.rst  usage.ipynb  usage.rst
examples/: CMakeLists.txt  cme_example.cpp  cme_example.py  cme_example_2.py  cme_example_3.py  cme_example_4.py  rdme_example.cpp  rdme_example.py  rdme_example_2.py  rdme_example_3.py  rdme_example_4.py
pystospa/: CMakeLists.txt  README.md  __init__.py.in
pystospa/src/: pystospa.cpp  simulator.hpp  version.hpp
pystospaboost/: CMakeLists.txt  README.md  __init__.py.in
pystospaboost/src/: pystospa.cpp  reaction.hpp  simulator.hpp  version.hpp  voxel.hpp
src/: example.cpp  pystospa.cpp  reaction.hpp  simulator.hpp  stospa2py.cpp  tools.hpp  version.hpp.in  voxel.hpp
tests/: CMakeLists.txt  test_pystospa.py  test_reaction.hpp  test_simulator.hpp  test_voxel.hpp  unittests.cpp
